CSS to prevent card images from being too big

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -240,6 +240,8 @@ div.summary {
 
 .card img {
 	width: 20rem;
+	max-height: 12rem;
+	overflow: hidden;
 }
 
 .card h2 {
